[gd_scene load_steps=13 format=3 uid="uid://bpmlfhv30o08l"]

[ext_resource type="Script" uid="uid://buog53mcsao0g" path="res://Scripts/UI/TopPanel/top_ui.gd" id="2_fpnkx"]
[ext_resource type="Script" uid="uid://bafvsv0wf438w" path="res://Scripts/Misc/OnlineLinks.gd" id="3_tep3f"]
[ext_resource type="Script" uid="uid://caf875hofgogu" path="res://Scripts/UI/FormattedLocalizedLabel.gd" id="4_mle18"]
[ext_resource type="Script" uid="uid://qy3riyrj7tll" path="res://Scripts/UI/TopPanel/TopBarInput.gd" id="4_r6evh"]
[ext_resource type="Texture2D" uid="uid://bq4tg8ia2crwh" path="res://UI/Assets/LinksButtonImages/GithubLogo.png" id="6_0f73e"]
[ext_resource type="Texture2D" uid="uid://whhnbdvw3i1j" path="res://UI/Assets/LinksButtonImages/TumblrLogo.png" id="7_ja8k8"]
[ext_resource type="Texture2D" uid="uid://kmyr2ks7oil4" path="res://UI/Assets/LinksButtonImages/RedditLogo.png" id="8_3p41m"]
[ext_resource type="Texture2D" uid="uid://dt530lalergk0" path="res://DemoModels/Icons/BasicIcon.png" id="9_hrvuv"]
[ext_resource type="Texture2D" uid="uid://bhidrbb01hfmq" path="res://DemoModels/Icons/BGIcon.png" id="10_apeyf"]
[ext_resource type="Texture2D" uid="uid://fmhwpxa4hlo7" path="res://DemoModels/Icons/NormalIcon.png" id="11_bgxcq"]
[ext_resource type="Texture2D" uid="uid://bjxmdyue5pp2x" path="res://DemoModels/Icons/FollowMouseIcon.png" id="12_bmktp"]
[ext_resource type="Texture2D" uid="uid://dm7ppdlhye1ji" path="res://DemoModels/Icons/AssetIcon.png" id="13_f2y74"]

[node name="TopUI" type="Control"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("2_fpnkx")

[node name="OnlineLinks" type="Node" parent="."]
script = ExtResource("3_tep3f")

[node name="TopBarInput" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_r6evh")

[node name="TopBar" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TopBar"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10

[node name="HBox" type="HBoxContainer" parent="TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FilesButton" type="MenuButton" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "TR_FILES"
item_count = 10
popup/item_0/text = "TR_NEW"
popup/item_0/id = 0
popup/item_1/text = "TR_OPEN"
popup/item_1/id = 1
popup/item_2/text = "TR_SAVE"
popup/item_2/id = 8
popup/item_3/text = "TR_SAVE_AS"
popup/item_3/id = 3
popup/item_4/text = "TR_ADD_IMAGE"
popup/item_4/id = 4
popup/item_5/text = "TR_ADD_APPENDAGE"
popup/item_5/id = 6
popup/item_6/text = "TR_EXPORT_MODEL_PARTS"
popup/item_6/id = 9
popup/item_7/text = "TR_DEMO_MODEL"
popup/item_7/id = 5
popup/item_8/text = "TR_LIP_SYNC_CONFIG"
popup/item_8/id = 10
popup/item_9/text = "Switch Session"
popup/item_9/id = 11

[node name="ModeButton" type="MenuButton" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "TR_MODE"
item_count = 2
popup/item_0/text = "TR_EDITOR"
popup/item_0/id = 0
popup/item_1/text = "TR_PREVIEW"
popup/item_1/id = 1

[node name="BGButton" type="MenuButton" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "TR_BG_COLOR"
item_count = 7
popup/item_0/text = "TR_RED"
popup/item_0/id = 0
popup/item_1/text = "TR_BLUE"
popup/item_1/id = 1
popup/item_2/text = "TR_GREEN"
popup/item_2/id = 2
popup/item_3/text = "TR_MAGENTA"
popup/item_3/id = 3
popup/item_4/text = "TR_TRANSPARENT"
popup/item_4/id = 4
popup/item_5/text = "TR_GRAY"
popup/item_5/id = 5
popup/item_6/text = "TR_CUSTOM"
popup/item_6/id = 6

[node name="BounceControlButton" type="MenuButton" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = " Bounce "

[node name="InputsButton" type="MenuButton" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "TR_SETTINGS"

[node name="CollabButton" type="MenuButton" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(79, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 15
text = "Collab
"

[node name="WindowButton" type="MenuButton" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "TR_WINDOW"
item_count = 7
popup/item_0/text = "TR_TOGGLE_BORDERS"
popup/item_0/id = 0
popup/item_1/text = "TR_SAVE_WINDOW_POSITIONS"
popup/item_1/id = 1
popup/item_2/text = "TR_ALWAYS_ON_TOP"
popup/item_2/checkable = 1
popup/item_2/id = 2
popup/item_3/text = "TR_CENTER_WINDOW"
popup/item_3/id = 3
popup/item_4/text = "Add Window"
popup/item_4/id = 4
popup/item_5/text = "Hide Mini-View"
popup/item_5/checkable = 1
popup/item_5/checked = true
popup/item_5/id = 5
popup/item_6/text = "Hide Sprite-View"
popup/item_6/checkable = 1
popup/item_6/checked = true
popup/item_6/id = 6

[node name="AboutButton" type="MenuButton" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "TR_ABOUT"
item_count = 3
popup/item_0/text = "TR_CREDITS"
popup/item_0/id = 0
popup/item_1/text = "TR_ABOUT"
popup/item_1/id = 1
popup/item_2/text = "TR_MINI_TUTORIAL"
popup/item_2/id = 2

[node name="PreviewModeCheck" type="CheckBox" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(79, 0)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Turns your model Static.
Uncheck to preview your model's movement. 
This automatically gets unchecked when changing modes.
"
focus_mode = 0
theme_override_font_sizes/font_size = 14
text = "TR_PAUSE_MOVEMENT"
flat = true

[node name="HideUIButton" type="CheckBox" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(79, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 14
button_pressed = true
text = "TR_SHOW_UI"
flat = true

[node name="DeselectButton" type="Button" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(79, 0)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0.74558, 0.74558, 0.74558, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 14
text = "Deselect"
flat = true
icon_alignment = 1

[node name="WindowSize" type="Label" parent="TopBar/MarginContainer/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(184, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_font_sizes/font_size = 11
text = "{0} (0,0)"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_mle18")
localizations = Array[String](["TR_WINDOW_SIZE"])

[node name="AboutPopUp" type="PopupPanel" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 2
size = Vector2i(400, 251)
wrap_controls = false

[node name="VBoxContainer" type="VBoxContainer" parent="AboutPopUp"]
offset_left = 4.0
offset_top = 4.0
offset_right = 396.0
offset_bottom = 247.0

[node name="CreditLabel" type="Label" parent="AboutPopUp/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TR_FULL_CREDITS"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GridContainer" type="GridContainer" parent="AboutPopUp/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="SourceLabel" type="Label" parent="AboutPopUp/VBoxContainer/GridContainer"]
layout_mode = 2
text = "TR_SOURCE_CODE"

[node name="GitHubButton" type="TextureButton" parent="AboutPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("6_0f73e")
texture_pressed = ExtResource("6_0f73e")
texture_hover = ExtResource("6_0f73e")
texture_disabled = ExtResource("6_0f73e")
ignore_texture_size = true
stretch_mode = 0

[node name="EmptySpace" type="Control" parent="AboutPopUp/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="SocialLabel" type="Label" parent="AboutPopUp/VBoxContainer/GridContainer"]
layout_mode = 2
text = "TR_SOCIALS"

[node name="TumblrButton" type="TextureButton" parent="AboutPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("7_ja8k8")
texture_pressed = ExtResource("7_ja8k8")
texture_hover = ExtResource("7_ja8k8")
texture_disabled = ExtResource("7_ja8k8")
ignore_texture_size = true
stretch_mode = 0

[node name="RedditButton" type="TextureButton" parent="AboutPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("8_3p41m")
texture_pressed = ExtResource("8_3p41m")
texture_hover = ExtResource("8_3p41m")
texture_disabled = ExtResource("8_3p41m")
ignore_texture_size = true
stretch_mode = 0

[node name="TempPopUp" type="PopupPanel" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 2
size = Vector2i(571, 195)

[node name="VBoxContainer" type="VBoxContainer" parent="TempPopUp"]
offset_left = 4.0
offset_top = 4.0
offset_right = 567.0
offset_bottom = 191.0

[node name="TempLabel" type="Label" parent="TempPopUp/VBoxContainer"]
layout_mode = 2
text = "TR_CHOOSE_DEMO"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="TempPopUp/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="BasicTempButton" type="Button" parent="TempPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "TR_BASIC_DEMO"
icon = ExtResource("9_hrvuv")
expand_icon = true

[node name="BGTempButton" type="Button" parent="TempPopUp/VBoxContainer/GridContainer"]
visible = false
custom_minimum_size = Vector2(320, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Model With Background Demo"
icon = ExtResource("10_apeyf")
expand_icon = true

[node name="NormalmTempButton" type="Button" parent="TempPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "TR_NORMAL_MAP_DEMO"
icon = ExtResource("11_bgxcq")
expand_icon = true

[node name="FollowMouseTempButton" type="Button" parent="TempPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "TR_FOLLOW_MOUSE_DEMO"
icon = ExtResource("12_bmktp")
expand_icon = true

[node name="AssetTempButton" type="Button" parent="TempPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/icon_max_width = 37
text = "TR_ASSET_MODEL_DEMO"
icon = ExtResource("13_f2y74")

[node name="CreditPopUp" type="PopupPanel" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 2
size = Vector2i(438, 249)

[node name="VBoxContainer" type="VBoxContainer" parent="CreditPopUp"]
offset_left = 4.0
offset_top = 4.0
offset_right = 434.0
offset_bottom = 245.0

[node name="AboutLabel" type="Label" parent="CreditPopUp/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "{0}
"
horizontal_alignment = 1
script = ExtResource("4_mle18")
localizations = Array[String](["TR_ABOUT"])

[node name="Label" type="Label" parent="CreditPopUp/VBoxContainer"]
custom_minimum_size = Vector2(430, 150)
layout_mode = 2
text = "TR_ABOUT_FULL"
autowrap_mode = 3

[node name="Background" type="PopupPanel" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 2
size = Vector2i(284, 416)

[node name="BGColorPicker" type="ColorPicker" parent="Background"]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 4.0
offset_right = 280.0
offset_bottom = 412.0
mouse_filter = 0
edit_alpha = false
color_mode = 1
picker_shape = 1
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
presets_visible = false

[connection signal="pressed" from="TopBar/MarginContainer/HBox/InputsButton" to="TopBarInput" method="_on_inputs_button_pressed"]
[connection signal="about_to_popup" from="TopBar/MarginContainer/HBox/WindowButton" to="TopBarInput" method="_on_window_button_about_to_popup"]
[connection signal="toggled" from="TopBar/MarginContainer/HBox/PreviewModeCheck" to="TopBarInput" method="_on_preview_mode_check_toggled"]
[connection signal="toggled" from="TopBar/MarginContainer/HBox/HideUIButton" to="TopBarInput" method="_on_hide_ui_button_toggled"]
[connection signal="pressed" from="TopBar/MarginContainer/HBox/DeselectButton" to="TopBarInput" method="_on_deselect_button_pressed"]
[connection signal="pressed" from="AboutPopUp/VBoxContainer/GridContainer/GitHubButton" to="OnlineLinks" method="_on_git_hub_button_pressed"]
[connection signal="pressed" from="AboutPopUp/VBoxContainer/GridContainer/TumblrButton" to="OnlineLinks" method="_on_tumblr_button_pressed"]
[connection signal="pressed" from="AboutPopUp/VBoxContainer/GridContainer/RedditButton" to="OnlineLinks" method="_on_reddit_button_pressed"]
[connection signal="pressed" from="TempPopUp/VBoxContainer/GridContainer/BasicTempButton" to="TopBarInput" method="_on_basic_temp_button_pressed"]
[connection signal="pressed" from="TempPopUp/VBoxContainer/GridContainer/BGTempButton" to="TopBarInput" method="_on_bg_temp_button_pressed"]
[connection signal="pressed" from="TempPopUp/VBoxContainer/GridContainer/NormalmTempButton" to="TopBarInput" method="_on_normalm_temp_button_pressed"]
[connection signal="pressed" from="TempPopUp/VBoxContainer/GridContainer/FollowMouseTempButton" to="TopBarInput" method="_on_follow_mouse_temp_button_pressed"]
[connection signal="pressed" from="TempPopUp/VBoxContainer/GridContainer/AssetTempButton" to="TopBarInput" method="_on_asset_temp_button_pressed"]
[connection signal="focus_entered" from="Background" to="TopBarInput" method="_on_background_focus_entered"]
[connection signal="focus_exited" from="Background" to="TopBarInput" method="_on_background_focus_exited"]
[connection signal="color_changed" from="Background/BGColorPicker" to="TopBarInput" method="_on_color_picker_color_changed"]
